--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -2,6 +2,7 @@
 body {
 	background: url(../img/loginbackground.jpg) no-repeat;
 	background-size: 100% 750px;
+	background-color: red;
 }
 .lo {
 	margin: 0 auto;
