--- a/WebContent/css/superstyle.css
+++ b/WebContent/css/superstyle.css
@@ -470,6 +470,23 @@ body {
 	margin-top: 85px;
 }
 
+.t .t2 .ws {
+	width: 100%;
+	height: 49px;
+	display: inline-block;
+}
+
+.t .t2 .ws input{
+	display: inline;
+	margin: 0;
+	width: 145px;
+	height: 39px;
+	line-height: 39px;
+	text-align: center;
+	background-color: #e2e5e9;
+	color: #213862;
+}
+
 .t .t2 .sac {
 	width: 100%;
 	height: 400px;
@@ -477,6 +494,7 @@ body {
 
 .t .t2 .sac .search {
 	display: block;
+	float: right;
 	width: 211px;
 	height: 28px;
 	background: url(../img/spirit/spirit.jpg);
@@ -486,11 +504,23 @@ body {
 	border-radius: 10px;
 }
 
-.t .t2 .sac .search input {
-	display: block;
-	width: 175px;
+.t .t2 .sac .search .i1{
+	display: inline-block;
+	float: right;
+	width: 46px;
 	height: 27px;
-	margin-left: 36px;
+	background-color: #033b66;
+	border-radius: 10px;
+	border: 0;
+	outline: none;
+	color: white;
+}
+
+.t .t2 .sac .search .i2{
+	display: inline-block;
+	float: right;
+	width: 129px;
+	height: 27px;
 	background-color: #033b66;
 	border-radius: 10px;
 	border: 0;
