--- a/WebContent/css/superstyle.css
+++ b/WebContent/css/superstyle.css
@@ -151,13 +151,13 @@ body {
 
 .t {
 	width: 100%;
-	height: 600px;
+	height: 1000px;
 }
 
 .t .t0 {
 	margin-top: 85px;
 	width: 1170px;
-	height: 300px;
+	heigh: 300px;
 	position: absolute;
 }
 
@@ -470,26 +470,25 @@ body {
 	margin-top: 85px;
 }
 
-.t .t2 .ws {
+.t .t2 .w {
 	width: 100%;
 	height: 49px;
-	display: inline-block;
 }
 
-.t .t2 .ws input{
-	display: inline;
+.t .t2 .w input{
+	display: inline-block;
 	margin: 0;
 	width: 145px;
 	height: 39px;
 	line-height: 39px;
-	text-align: center;
+	/* text-align: center; */
 	background-color: #e2e5e9;
 	color: #213862;
 }
 
 .t .t2 .sac {
 	width: 100%;
-	height: 400px;
+	height: 850px;
 }
 
 .t .t2 .sac .search {
@@ -512,6 +511,7 @@ body {
 	background-color: #033b66;
 	border-radius: 10px;
 	border: 0;
+	margin: 0;
 	outline: none;
 	color: white;
 }
@@ -519,11 +519,12 @@ body {
 .t .t2 .sac .search .i2{
 	display: inline-block;
 	float: right;
-	width: 129px;
+	width: 128px;
 	height: 27px;
 	background-color: #033b66;
 	border-radius: 10px;
 	border: 0;
+	margin: 0;
 	outline: none;
 	color: white;
 }
@@ -531,7 +532,7 @@ body {
 .t .t2 .accident form {
 	margin-right: 64px;
 	width: 1170px;
-	height: 300px;
+	height: 700px;
 }
 
 .t .t2 .accident form table {
@@ -1301,6 +1302,7 @@ footer {
 	height: 100px;
 	background: url(../img/foot.jpg) no-repeat;
 	background-size: cover;
+	margin-bottom: 0px;
 }
 
 
