--- a/WebContent/css/superstyle.css
+++ b/WebContent/css/superstyle.css
@@ -151,7 +151,7 @@ body {
 
 .t {
 	width: 100%;
-	height: 1000px;
+	height: 1600px;
 }
 
 .t .t0 {
@@ -473,22 +473,27 @@ body {
 .t .t2 .w {
 	width: 100%;
 	height: 49px;
+	text-align: center;
 }
 
-.t .t2 .w input{
+.t .t2 .w a{
 	display: inline-block;
 	margin: 0;
 	width: 145px;
 	height: 39px;
 	line-height: 39px;
-	/* text-align: center; */
-	background-color: #e2e5e9;
+	background: rgba(255,255,252,0.6);
 	color: #213862;
 }
 
+.t .t2 .w a:hover {
+	text-decoration: none;
+}
+
 .t .t2 .sac {
-	width: 100%;
-	height: 850px;
+	width: 1000px;
+	height: 1500px;
+	display: inline-block;
 }
 
 .t .t2 .sac .search {
@@ -531,12 +536,12 @@ body {
 
 .t .t2 .accident form {
 	margin-right: 64px;
-	width: 1170px;
+	width: 1000px;
 	height: 700px;
 }
 
 .t .t2 .accident form table {
-	width: 1170px;
+	width: 1000px;
 }
 
 .t .t2 .accident form table th {
@@ -1284,16 +1289,6 @@ body {
 
 /*主内容end*/
 
-/*翻页start*/
-/*#f_content .f_y {
-	width: 919px;
-	height: 100px;
-	position: absolute;
-	left: 340px;
-	top: 795px;
-	margin: auto;
-}*/
-/*翻页end*/
 
 /*底部start*/
 
@@ -1302,7 +1297,6 @@ footer {
 	height: 100px;
 	background: url(../img/foot.jpg) no-repeat;
 	background-size: cover;
-	margin-bottom: 0px;
 }
 
 
